Fix input border-danger over errors, add extra padding

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,6 @@
 .myInput > input {
   border-radius: 0;
-  border: 0;
+  padding: .6rem .5rem;
   box-shadow: 2px 2px 7px 0.5px rgba(0, 0, 0, 0.25);
 }
 .myTextarea > textarea {
